--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</h4> 
 			</div> 
 			<div class="intro-buttons"> 
-                <a class="btn ghost-btn" type="button" target="_blank" href="RESUME.pdf">Get Resume</a> 
+                <a class="btn ghost-btn" type="button" target="_blank" href="https://github.com/Rushi18113/Portfolio/blob/main/RESUME.pdf">Get Resume</a> 
 			</div> 
 		</div> 
 	</section> 
